# 42ft_transcendence

./: .env.sample  .gitignore  .zshrc  Makefile  README.md  docker-compose.elk.yml  docker-compose.yml  package-lock.json  package.json  review.md
api/: Dockerfile  entrypoint.sh  models.py  pyproject.toml  requirements.txt
api/core/: asgi.py  logger.py  settings.py  urls.py  wsgi.py
api/pong/: admin.py  base_consumers.py  consumers.py  game_logic.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  tests.py  tournament_consumers.py  urls.py  views.py
api/pong/fixtures/: initial_data.json
api/pong/management/commands/: create_password_hash.py
api/pong/migrations/: 0001_initial.py  0002_tournament_blockchainscore.py  0003_alter_game_player2.py  0003_user_experience.py  0004_user_experience.py  0005_gamesession.py  0006_alter_user_avatar.py  0006_user_language.py  0007_remove_tournament_games_and_more.py  0007_tournamentgamesession_tournamentmatch_and_more.py  0008_tournamentgamesession_tournamentmatch_and_more.py  0008_user_friends_user_is_online.py  0009_tournamentgamesession_tournamentmatch_and_more.py  0010_remove_tournamentgamesession_max_players_and_more.py  0011_tournamentsession_and_more.py  0012_user_last_activity.py
api/pong/modules/Auth/: serializers.py  views.py
api/pong/tests/: test_consumers.py  test_game_logic.py  test_handlers.py  test_model.py  test_repositories.py  test_serializers.py  test_services.py  test_views.py
api/pong/tournament/: handlers.py  repositories.py  services.py
api/src/: asgi.py  settings.py  wsgi.py
(+231 files in other folders)
