[tool.poetry]
name = "api"
version = "0.1.0"
description = "Django API project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.1"
django = "^5.0"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
pillow = "^11.1.0"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
